fix team page banner css alignment issue & css background img extraction

--- a/src/pages/match-list/match-list.scss
+++ b/src/pages/match-list/match-list.scss
@@ -1,9 +1,15 @@
 page-match-list {
   .card-background-page {
+
+    .league-background-img{
+      max-height: 12rem;
+      opacity: 0.8;
+      object-fit: fill;
+    }
     ion-card {
-      background-image: url("../assets/img/match/background.png");
-      background-size: cover;
-      background-position: center center;
+      //background-image: url("../assets/img/match/background.png");
+      //background-size: cover;
+      //background-position: center center;
       position: relative;
       text-align: center;
       height: 12rem;
