--- a/src/pages/my-team/my-team.scss
+++ b/src/pages/my-team/my-team.scss
@@ -98,6 +98,11 @@ page-my-team {
         left: 0;
         top:0;
         width: 100%;
+
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        justify-content: space-around;
       }
       //球队图标
       .thumbnail-img {
